@@ -1,12 +1,17 @@
 package hudson.plugins.sctmexecutor;
 
-import java.io.UnsupportedEncodingException;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.OutputStream;
 import java.security.Key;
 
 import javax.crypto.Cipher;
+import javax.crypto.CipherInputStream;
+import javax.crypto.CipherOutputStream;
 import javax.crypto.spec.SecretKeySpec;
 
-import org.apache.commons.codec.binary.Base64;
+import sun.misc.BASE64Decoder;
+import sun.misc.BASE64Encoder;
 
 /**
  * Crypto-logic
@@ -15,37 +20,36 @@ import org.apache.commons.codec.binary.Base64;
  */
 final class PwdCrypt {
   private static final String CRYPTO_ALGORITHM = "DESede";
-  private Key secretKey;
-
-  PwdCrypt(String key) {
-    secretKey = new SecretKeySpec(trimKey(key), CRYPTO_ALGORITHM);
-  }
-
-  private byte[] trimKey(String key) {
-    byte[] b = key.getBytes();
-    byte[] trimed = new byte[24];
-    for (int i=0;i<24;i++) {
-      trimed[i] = b[i];
-    }
-    
-    return trimed;
-  }
-
-  String encrypt(String s) throws UnsupportedEncodingException {
-    return String.valueOf(Base64.encodeBase64(crypt(s.getBytes("UTF8"), Cipher.ENCRYPT_MODE)));
-  }
   
-  String decrypt(String secret) throws UnsupportedEncodingException {
-      return String.valueOf(crypt(Base64.decodeBase64(secret.getBytes("UTF8")), Cipher.DECRYPT_MODE));
+  PwdCrypt() {}
+
+  static String encode(String toCrypt, String pass) throws Exception {
+    ByteArrayOutputStream out = new ByteArrayOutputStream();
+    Cipher c = Cipher.getInstance(CRYPTO_ALGORITHM);
+    Key k = new SecretKeySpec(pass.substring(0, 24).getBytes(), CRYPTO_ALGORITHM);
+    c.init(Cipher.ENCRYPT_MODE, k);
+
+    OutputStream cos = new CipherOutputStream(out, c);
+    cos.write(toCrypt.getBytes());
+    cos.close();
+    
+    return new BASE64Encoder().encode(out.toByteArray());
   }
 
-  private byte[] crypt(byte[] secret, int mode) {
-    try {
-      Cipher cipher = Cipher.getInstance(CRYPTO_ALGORITHM);
-      cipher.init(mode, secretKey);
-      return cipher.doFinal(secret);
-    } catch (Exception e) {
-      throw new RuntimeException(e);
-    }
+  static String decode(String secret, String pass ) throws Exception { 
+    ByteArrayInputStream is = new ByteArrayInputStream(new BASE64Decoder().decodeBuffer(secret));
+    Cipher c = Cipher.getInstance(CRYPTO_ALGORITHM); 
+    Key k = new SecretKeySpec(pass.substring(0, 24).getBytes(), CRYPTO_ALGORITHM ); 
+    c.init( Cipher.DECRYPT_MODE, k ); 
+ 
+    ByteArrayOutputStream bos = new ByteArrayOutputStream(); 
+    CipherInputStream cis = new CipherInputStream( is, c ); 
+ 
+    int b = 0;
+    while ((b = cis.read()) != -1)
+      bos.write(b); 
+ 
+    cis.close(); 
+    return bos.toString(); 
   }
 }
